# QueryHive

./: .gitignore  Dockerfile  README.md  docker-compose.yml  start_queryhive.sh  stop_queryhive.sh
backend/: .gitignore  Cargo.toml  Dockerfile  embedder.py
backend/config/: perf.json
backend/scripts/: blog.md  control.md  crs.md  eland-doc.md  elastic-queries.md  setup-db.sh
backend/src/: api.rs  cli.rs  config.rs  health.rs  hive.rs  indexing.rs  main.rs  metrics.rs  setup.rs
backend/static/: index.html
frontend/: .gitignore  Dockerfile  styles.css
frontend/src/: Main.elm
ollama/: Dockerfile
