[package]
name = "QueryHive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "QueryHive"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.23.4", features = ["auto-initialize", "extension-module"] }
axum = "0.6.0"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
hyper = { version = "0.14", features = ["full"] }  # For HTTP server
prometheus = "0.13"
clap = { version = "4", features = ["derive"], optional = true }
tower-http = { version = "0.4", features = ["cors","fs"] }
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.16.0" 

