[package]
name = "QueryHive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "QueryHive"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.23.4", features = ["auto-initialize", "extension-module"] }
axum = "0.6.0"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
hyper = { version = "0.14", features = ["full"] }  # For HTTP server
prometheus = "0.13"
clap = { version = "4", features = ["derive"], optional = true }
tower-http = { version = "0.4", features = ["cors","fs"] }
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3.2"
pdfium-render = "0.8.28"
docx-rs = "0.4.17"
pulldown-cmark = "0.13.0"
tokio-cron-scheduler = "0.13.0"
anyhow = "1.0"
futures = "0.3.30"
async-stream = "0.3.3"
langchain-rust = { version = "4.6.0", features = ["qdrant"] }

[dev-dependencies]
tempfile = "3.16.0" 

